syntax = "proto3";
package tcp.options.gloo.solo.io;

option go_package = "github.com/solo-io/gloo/projects/gloo/pkg/api/v1/options/tcp";


import "google/protobuf/wrappers.proto";
import "google/protobuf/duration.proto";

import "github.com/solo-io/solo-kit/api/external/envoy/api/v2/core/base.proto";

import "extproto/ext.proto";
option (extproto.equal_all) = true;
option (extproto.hash_all) = true;

// Contains various settings for Envoy's tcp proxy filter.
// See here for more information: https://www.envoyproxy.io/docs/envoy/v1.10.0/api-v2/config/filter/network/tcp_proxy/v2/tcp_proxy.proto#envoy-api-msg-config-filter-network-tcp-proxy-v2-tcpproxy
message TcpProxySettings {
    google.protobuf.UInt32Value max_connect_attempts = 1;
    google.protobuf.Duration idle_timeout = 2;

    // Configuration for tunneling TCP over other transports or application layers.
    // Currently, only HTTP/2 is supported. When other options exist, HTTP/2 will
    // remain the default.
    message TunnelingConfig {

        // The hostname to send in the synthesized CONNECT headers to the upstream proxy.
        string hostname = 1;

        // Use POST method instead of CONNECT method to tunnel the TCP stream.
        // The 'protocol: bytestream' header is also NOT set to comply with the HTTP spec.
        //
        // The upstream proxy is expected to convert POST payload as raw TCP.
        bool use_post = 2;

        // Additional request headers to upstream proxy. This is mainly used to
        // trigger upstream to convert POST requests back to CONNECT requests.
        //
        // Neither *:-prefixed* pseudo-headers nor the Host: header can be overridden.
        repeated .solo.io.envoy.api.v2.core.HeaderValueOption headers_to_add = 3;
    }

    // If set, this configures tunneling, e.g. configuration options to tunnel multiple TCP
    // payloads over a shared HTTP tunnel. If this message is absent, the payload
    // will be proxied upstream as per usual.
    // HTTP/2 is used by default, to use HTTP/1.1, explicitly set http_protocol_options
    // on the destination upstream
    TunnelingConfig tunneling_config = 12;
}